<resources>
    <string name="app_name">FoodApp</string>


    <string name="get_started">Get Started</string>
    <string name="cook_like_a_chef">Cook Like a Chef</string>
    <string name="just_for_you">Just For You</string>
    <string name="recipes">Recipes</string>
    <string name="rating">4.8</string>
    <string name="search_here">Search here...</string>
    <string name="discover_best_recipes">Discover Best\nRecipes</string>
    <string name="onboarding_screen_description">De Chef is a user-friendly recipe app designed for those who are new to cooking and want to try new recipes at home</string>
    <string name="food_category">Food category</string>
    <string name="follow">Follow</string>
    <string name="ingredients">Ingredients</string>
</resources>