<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main_screen.FragmentMain">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/onboarding_background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding_gradient_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/cook_like_a_chef"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="68dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/inter_light"
            android:gravity="center"
            android:text="@string/onboarding_screen_description"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="69dp"
            android:layout_marginBottom="66dp"
            android:backgroundTint="@color/white_green"
            android:fontFamily="@font/inter_bold"
            android:text="@string/get_started"
            android:textSize="20sp"
            app:cornerRadius="15dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>